# rewordly

./: .env.example  LICENSE  README.md  pyproject.toml
src/write_cli/: ai.py  config.py  diff.py  main.py  session.py  tui.py
src/write_cli/providers/: _openai_compat.py  base.py  gemini.py  github.py  ollama.py  openai_provider.py
tests/: test_ai.py  test_config.py  test_diff.py  test_providers.py  test_session.py
