[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewordly"
version = "0.1.0"
description = "Rewordly: an AI writing improvement CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "textual>=0.63.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "pyperclip>=1.8.2",
]

[project.scripts]
rewordly = "write_cli.main:app"
write = "write_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/write_cli"]
